hphp/hack/test/typecheck/reactive/mayberx18.php.exp
File "mayberx18.php", line 12, characters 7-8:
Class C2 does not correctly implement all required members  (Typing[4255])
File "mayberx18.php", line 12, characters 18-19:
Some members are incompatible with those declared in type C1
Read the following to see why:
File "mayberx18.php", line 15, characters 19-19:
Member f has the wrong type
File "mayberx18.php", line 8, characters 23-24:
This parameter does not satisfy __OnlyRxIfImpl condition defined on matching parameter in function super type.
File "mayberx18.php", line 15, characters 53-54:
This is parameter declaration from the function super type.
